# audire

./: .env.example  .gitignore  BUILD.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.js
.claude/: settings.local.json
.claude/agent-memory/audire-code-reviewer/: MEMORY.md
.claude/agent-memory/tauri-desktop-craftsman/: MEMORY.md
.claude/agents/: audire-code-reviewer.md  tauri-desktop-craftsman.md
.github/workflows/: ci-windows-size.yml
docs/: billing-model.md  cloud-architecture.md  diagrams.md
scripts/: bump-version.sh  check-size.ps1  check-size.sh
server/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  fly.toml
server/migrations/: 20260501000001_init.sql  20260501000002_orgs_members.sql
server/server/: Cargo.toml
server/server/src/: auth.rs  config.rs  db.rs  error.rs  main.rs  state.rs  sync_hub.rs
server/server/src/routes/: health.rs  mod.rs  orgs.rs  sync.rs  users.rs  vaults.rs
server/shared/: Cargo.toml
server/shared/src/: lib.rs  sync.rs
src/: interaction.js  main.js  sidebar.js  style.css  toast.js
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/helpers/: audire_sck_helper.swift  build_sck_helper.sh  para_audio_sck_helper.swift
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  ipc.rs  lib.rs  main.rs  state.rs
src-tauri/src/asr/: assemblyai.rs  deepgram.rs  events.rs  mock.rs  mod.rs
src-tauri/src/audio/: mic_cpal.rs  mod.rs  resample.rs  ring.rs  system_capture.rs  system_linux_monitor.rs  system_macos_sck.rs  system_windows_wasapi.rs  types.rs
src-tauri/src/keyvault/: vault.rs
src-tauri/src/llm/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  provider.rs  recipe.rs
src-tauri/src/services/: calendar.rs  detection.rs  folders.rs  keys.rs  meeting_notes.rs  mod.rs  retrieval.rs
src-tauri/src/store/: db.rs
src-tauri/src/sync/: account.rs  api.rs  client.rs  crypto.rs  manager.rs  mod.rs  ops.rs  orgs.rs  vaults.rs  worker.rs
src/views/: chat.js  companies.js  home.js  mynotes.js  notes.js  people.js  settings.js  shared.js  transcript.js
website/: README.md  index.html  package-lock.json  package.json  pricing.html  privacy.html  terms.html  vite.config.js
website/src/: download.js  style.css
