[workspace]
resolver = "2"
members = ["server", "shared"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Intelli Holdings Inc"]
repository = "https://github.com/Intelli-Holdings/audire"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Server-only
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip", "limit"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "macros", "migrate"] }
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures-util = "0.3"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
