[package]
name = "audire-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Audire Sync server — Fly.io binary."

[[bin]]
name = "audire-server"
path = "src/main.rs"

[dependencies]
audire-shared = { path = "../shared" }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
